--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^8.6.8",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-star-rating": "^2.1.0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -23,7 +24,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2"
   },
   "eslintConfig": {
